Added link to open space format from open space slots in program

--- a/static/scss/custom.scss
+++ b/static/scss/custom.scss
@@ -650,7 +650,7 @@ h3.program-page {
   color: #000;
 }
 
-.program-open-space {
+.program-open-space>a {
   background-color: lighten( #FF8300, 20%);
   color: #000;
 }
